src/objects/oAuth2Service__c.object
<CustomObject>
    <fields>
        <fullName>Auth_Scope__c</fullName>
        <label>Auth Scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auth_URL__c</fullName>
        <description>Auth URL</description>
        <label>Auth URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Identifier__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Service Identifier</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Token_URL__c</fullName>
        <label>Token URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>client_secret__c</fullName>
        <label>client_secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redirect_uri__c</fullName>
        <label>redirect_uri</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>oAuth2Service</label>
    <nameField>
        <label>oAuth2Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>oAuth2Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>